--- a/index.html
+++ b/index.html
@@ -4,12 +4,17 @@
 <head>
     <meta charset="utf-8">
     <title>移动端H5游戏开发</title>
+    <link rel="stylesheet" href="css/style.css">
+    <script type="text/javascript" src="js/lex.js">
+    </script>
 </head>
 
 <body>
-    <section>
+    <script type="text/javascript">
+        document.body.style.height = view().h + 'px';
+    </script>
+    <section class="bgColor">
         <div class="Bg-page1">
-
         </div>
     </section>
 </body>
