style and animation of start page.

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8">
     <title>移动端H5游戏开发</title>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/animation.css">
     <script type="text/javascript" src="js/lex.js">
     </script>
 </head>
@@ -14,8 +15,13 @@
         document.body.style.height = view().h + 'px';
     </script>
     <section class="bgColor">
-        <div class="Bg-page1">
+        <div class="Bg-page1"></div>
+        <div class="bg-start"></div>
+        <div class="main_page1">
+            <div class="rocket"></div>
+            <div class="thanks"></div>
         </div>
+        <div class="arrow"></div>
     </section>
 </body>
 
