animation of come in.

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <script type="text/javascript">
         document.body.style.height = view().h + 'px';
     </script>
-    <section class="bgColor">
+    <section class="bgColor sectionIn">
         <div class="Bg-page1"></div>
         <div class="bg-start"></div>
         <div class="main_page1">
@@ -23,6 +23,8 @@
         </div>
         <div class="arrow"></div>
     </section>
+
 </body>
 
 </html>
+/html>
