--- a/index.html
+++ b/index.html
@@ -22,9 +22,52 @@
             <div class="thanks"></div>
         </div>
         <div class="arrow"></div>
+        <div class="music musicRun">
+            <audio src="audio/bg.mp3" autoplay="true" preload="auto">
+          </audio>
+        </div>
     </section>
+    <script type="text/javascript">
+        changePage();
 
+        function changePage() {
+            var section = document.getElementsByTagName('section'),
+                pageDown = 0;
+
+            bind(document, 'touchstart', function(ev) {
+                var ev = ev || event;
+                var pageDown = ev.changedTouches[0].pageY;
+            });
+            bind(document, 'touchstart', function(ev) {
+                var ev = ev || event;
+                var pageUp = ev.changedTouches[0].pageY;
+                if (pageUp > pageDown) {
+                    //向上播放下一篇
+                    removeClass(section[0], 'sectionIn');
+                    addClass(section[0], 'sectionOut');
+                }
+            });
+        };
+
+        musicShow();
+
+        function musicShow() {
+            var music = document.getElementsByClassName('music')[0];
+            var musicClasses = music.classList;
+            var au = music.getElementsByTagName('audio')[0];
+            bind(music, 'touchstart', function() {
+                if (au.paused) {
+                    au.play();
+                    musicClasses.remove('musicStop');
+                    musicClasses.add('musicRun');
+                } else {
+                    au.pause();
+                    musicClasses.remove('musicRun');
+                    musicClasses.add('musicStop');
+                }
+            })
+        }
+    </script>
 </body>
 
 </html>
-/html>
