--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
             <audio src="audio/bg.mp3" autoplay="true" preload="auto">
           </audio>
         </div>
+        <div class="progress">
+            <span></span>
+        </div>
     </section>
     <script type="text/javascript">
         changePage();
@@ -66,8 +69,25 @@
                     musicClasses.add('musicStop');
                 }
             })
-        }
+        };
+
+        var arrImg = ['imgs/arrow.png', 'imgs/rocket.png', 'imgs/run.png', 'imgs/star.png', 'imgs/stop.png', 'imgs/thanks.png'];
+        var progressBar = document.getElementsByClassName('progress')[0];
+        var prograssSpan = document.getElementsByTagName('span')[0];
+        for (var i = 0; i < arrImg.length; i++) {
+            var aImg = document.createElement('img');
+            var loadNum = 0;
+            aImg.src = arrImg[i];
+            aImg.onload = function() {
+                loadNum++;
+                prograssSpan.style.width = Math.floor(loadNum / arrImg.length) * 100 + '%';
+                if (loadNum === arrImg.length) {
+                    progressBar.remove();
+                }
+            };
+        };
     </script>
 </body>
 
 </html>
+>
