--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <script type="text/javascript">
         document.body.style.height = view().h + 'px';
     </script>
-    <section class="bgColor sectionIn">
+    <section class="sectionIn">
         <div class="Bg-page1"></div>
         <div class="bg-start"></div>
         <div class="main_page1">
